--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+      - name: Update vendor bundles
+        run: python scripts/update_vendor.py
       - name: Build site
         run: python scripts/build_site.py
       - name: Upload artifact
